# CampusPal-ChatBot

./: .gitignore  README.md  app.py  chatbot.py  gpt.py  home.py  pyproject.toml  raw_notes.py  tet.py
chroma_db/: chroma.sqlite3
