[project]
name = "fine-tuning-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5",
    "datasets>=3.5.0",
    "huggingface-hub>=0.30.2",
    "langchain>=0.3.23",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.21",
    "langchain-ollama>=0.3.2",
    "peft>=0.15.2",
    "pypdf2>=3.0.1",
    "streamlit>=1.44.1",
    "streamlit-chat>=0.1.1",
    "streamlit-file-browser>=3.2.22",
    "streamlit-option-menu>=0.4.0",
    "streamlit-pdf-viewer>=0.0.22",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]
